--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "d:\\Programs\\miniconda3\\envs\\pygame\\python.exe"
+    "python.pythonPath": "D:\\Programs\\miniconda3\\envs\\python37\\python.exe"
 }
